# kubesman

./: .dockerignore  .env.dev  .gitignore  CODEOWNERS  Cargo.toml  Containerfile.backend.dev  Dockerfile.backend.dev  Makefile  README.md  answer.json  casdoor.dev.toml  containe_id.txt  justfile  template.config.toml  template.env.dev
cluster-types/: Cargo.toml  build.rs
cluster-types/protos/: pod.proto
cluster-types/src/: lib.rs  pods.rs
dev_db/: aria_log.00000001  aria_log_control
dev_db/casdoor/: adapter.frm  application.frm  casbin_api_rule.frm  casbin_rule.frm  casbin_user_rule.frm  cert.frm  enforcer.frm  group.frm  invitation.frm  ldap.frm  model.frm  organization.frm  payment.frm  permission.frm  permission_rule.frm  plan.frm  pricing.frm  product.frm  provider.frm  radius_accounting.frm  record.frm  resource.frm  role.frm  session.frm  subscription.frm  syncer.frm  token.frm  transaction.frm  user.frm  verification_record.frm  webhook.frm
dev_db/mysql/: column_stats.MAI  column_stats.frm  columns_priv.MAI  columns_priv.frm  db.MAI  db.frm  event.MAI  event.frm  func.MAI  func.frm  general_log.frm  global_priv.MAD  global_priv.MAI  global_priv.frm  gtid_slave_pos.frm  help_category.MAI  help_category.frm  help_keyword.MAI  help_keyword.frm  help_relation.MAI  help_relation.frm  help_topic.MAI  help_topic.frm  index_stats.MAI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  innodb_table_stats.frm  innodb_table_stats.ibd  plugin.MAI  plugin.frm  proc.MAD  proc.MAI  proc.frm  procs_priv.MAI  procs_priv.frm  proxies_priv.MAD  proxies_priv.MAI  proxies_priv.frm  roles_mapping.MAI  (+20 more)
dev_db/sys/: host_summary.frm  host_summary_by_file_io.frm  metrics.frm  (+100 more)
exampler/: Cargo.toml
fbs/: access.fbs  refresh.fbs
frontend/: .gitignore  README.md  dev.env  pubspec.yaml
k8s-fbs/: Cargo.toml  fbs.list
k8s-protos/: Cargo.toml
rewriter/: Cargo.toml
src/: handlers.rs  lib.rs  main.rs  tokens.rs
(+4252 files in other folders)
