[package]
name = "kubesman"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "exampler", "rewriter"]

[dependencies]
k8s-protos = {path = "k8s-protos"}
actix-web = { version = "4.9.0" }
actix-files = { version = "0.6.6" }
env_logger = { version = "0.11.3" }
log = { version = "0.4.22" }
kube = { version = "0.96.0" }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
futures = { version = "0.3.31" }
serde_json = { version = "1.0.132" }
serde = { version = "1.0.214" }
protobuf = "3.7.1"