[package]
name = "kubesman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kubesman_server"
path = "src/main.rs"

[dependencies]
k8s-rs-pb ="0.1.3"
actix-web = { version = "4.9.0" }
actix-files = { version = "0.6.6" }
env_logger = { version = "0.11.6" }
log = { version = "0.4.22" }
kube = { version = "0.97.0" }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
futures = { version = "0.3.31" }
serde_json = { version = "1.0.134" }
serde = { version = "1.0.216" }
protobuf = "3.7.1"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"
casdoor-rs-sdk = { git = "https://github.com/DMoscicki/casdoor-rs-sdk.git", branch = "main"}
dotenvy = "0.15.7"