[package]
name = "kubesman"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["DMoscicki <dimulgator@outlook.com>"]

[[bin]]
name = "kubesman_server"
path = "src/main.rs"

[dependencies]
k8s-rs-pb ="0.1.3"
actix-web = { version = "4.9.0" }
actix-files = { version = "0.6.6" }
env_logger = { version = "0.11.6" }
log = { version = "0.4.22" }
kube = { version = "0.98.0" }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
protobuf = "3.7.1"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"
casdoor-sdk-rust = "1.0.2"
dotenvy = "0.15.7"
flatbuffers = "24.12.23"
serde = "1.0.217"